# cryptic-crossword-bench

./: .gitignore  .pre-commit-config.yaml  EVAL.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml  deploy-pages.yml
data/benchmark/: crossword-cryptic-20260103-78256.json  crossword-cryptic-20260109-80222.json  crossword-cryptic-20260112-81258.json  crossword-cryptic-20260113-81257.json  crossword-quick-cryptic-20260103-78267.json  crossword-quick-cryptic-20260109-80229.json  crossword-quick-cryptic-20260112-81274.json  crossword-quick-cryptic-20260113-81278.json
eval/: cryptic_crossword_eval.py  run_and_save.py  run_eval_example.py  save_results.py
extraction/: extract_answers.py  extract_clues.py  run_extraction.py
results/: README.md  anthropic_claude-haiku-4-5-20251001.jsonl  anthropic_claude-opus-4-5-20251101.jsonl  anthropic_claude-sonnet-4-20250514.jsonl  anthropic_claude-sonnet-4-5-20250929.jsonl  google_gemini-2.0-flash.jsonl  google_gemini-2.5-flash.jsonl  google_gemini-2.5-pro.jsonl  google_gemini-3-flash-preview.jsonl  google_gemini-3-pro-preview.jsonl  openai_gpt-4.1.jsonl  openai_gpt-4o.jsonl  openai_gpt-5.2.jsonl  openai_gpt-5.jsonl  openai_o1.jsonl  openai_o3.jsonl
web/: README.md  app.js  build_results.py  index.html  style.css
